Fix a number of !TabContainer issues related to close icon: 	- no [x] text appears in IE7 or IE quirks high-contrast RTL mode (fixes #11153) 	- icon appears on left rather than right in RTL mode 	- hover effect broken in tundra, soria, nihilo (regression from [21144], refs #10613) 	- height problems mixing closable and unclosable tabs on webkit (fixes #11155, !strict): 		* border under unselected tabs also appears under selected tab 		* closable tabs are 1px too tall, obscuring that same border 	- hovering close button in high-contrast mode causes tab to expand horizontally
The main change was to make the close icon a sibling of the label, rather than nested inside of the closeButton span.  This avoids browser bugs on webkit and IE.  Also stopped using an <img> tag to display the icon since that has issues with the title/alt attributes on IE6/7.


git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@22187 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/claro/layout/TabContainer.css
+++ b/themes/claro/layout/TabContainer.css
@@ -15,20 +15,16 @@
 	border-color: #b5bcc7;
 }
 .claro .dijitTabCloseButton {
-	margin-left: 0;
-}
-.claro .dijitTabCloseIcon {
 	background: url("images/tabClose.png") no-repeat;
 	width: 14px;
 	height: 14px;
 	margin-left: 5px;
-	margin-top:-1px;
 	margin-right:-3px;
 }
-.claro .dijitTabCloseButtonHover .dijitTabCloseIcon {
+.claro .dijitTabCloseButtonHover {
 	background-position:-14px;
 }
-.claro .dijitTabCloseButtonActive .dijitTabCloseIcon {
+.claro .dijitTabCloseButtonActive {
 	background-position:-28px;
 }
 .claro .dijitTabSpacer {
