--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -1389,24 +1389,28 @@ div.dijitTabDisabled, .dj_ie div.dijitTabDisabled {
 	margin-left: 1em;
 }
 
-/* images off, high-contrast mode styles */
 .dijitTabCloseText {
 	display:none;
 }
 
+/* images off, high-contrast mode styles */
+
+.dijit_a11y .dijitTabCloseButton {
+	background-image: none !important;
+	width: auto !important;
+	height: auto !important;
+	border: thin dotted;	/* non-hover state */
+}
+.dijit_a11y .dijitTabCloseButtonHover {
+	border:thin solid;	/* hover state */
+}
+
 .dijit_a11y .dijitTabCloseText {
-	display:inline;
-	margin: 0px 6px;
+	display: inline;
 }
 
-.dijit_a11y .dijitTabCloseIcon {
-	display:none;
-}
-
-.dijit_a11y .dijitTabCloseButtonHover .dijitTabCloseText {
-	border:thin solid;
-}
 .dijit_a11y .dijitTabChecked {
+	/* the selected tab */
 	border-style:dashed !important;
 }
 
